--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tweenjs/tween.js": "17.3.0",
     "chroma-js": "2.0.3",
     "core-js": "2.6.5",
+    "noisejs": "2.1.0",
     "three": "0.104.0",
     "vue": "2.6.10",
     "vue-router": "3.0.6"
